syntax = "proto3";

package pb;

option go_package = "github.com/ahtamoff/Hospital_Service_API";

service AppointmentService {
  rpc BookAppointment(BookAppointmentRequest) returns (BookAppointmentResponse);
}

message BookAppointmentRequest {
  string user_id = 1;
  string doctor_id = 2;
  string slot = 3; // Use string for simplicity, can be changed to google.protobuf.Timestamp
}

message BookAppointmentResponse {
  string status = 1;
}
